# intelligent-claims-orchestrator

./: .gitignore  README.md  agents.md  deploy_updates.ps1  first_payment.json  main.py  payment_all_logs.json  payment_earlier.json  payment_full.txt  pyproject.toml  requirements.txt  run_upload.ps1  test-override-event.json  update_code.ps1  update_state_machine.ps1
.agents/: 01-plan.md  02-design.md  03-build.md  04-test.md  05-review.md  06-document.md  07-deploy-maintain.md  validate-state.py
cdk/: app.py  lambda-observability.yaml  storage-lifecycle.yaml
docs/: IMPLEMENTATION_SUMMARY.md  agent-coordination.md  coordination-state.json  design-architecture.md  phase-7-deployment-checklist.md  phase-7-implementation.md  phase-7-quick-start.md  phase-7-status.md  phase-7-summary.md  phase-8-roi-optimization-plan.md  prd.md  quicksight-dashboards.md  review-report.md  test-report.md
docs/adr/: adr-001-step-functions-orchestration.md  adr-002-analytics-data-lake.md  adr-template.md
docs/observability/: opentelemetry-guide.md
docs/runbooks/: bedrock-guardrail-block.md  bedrock-json-parse-failure.md  (+2 more)
infra/: app.py  cdk-outputs.json  cdk.json
scripts/: check_status.py  clean_execution.py  fix_db_mapping.py  iam_least_privilege_check.py  seed_prompts.py  verify_phase_0.py  verify_phase_1.py  verify_phase_1_textract.py  verify_phase_2.py  verify_phase_3.py  verify_phase_4.py  verify_phase_5.py  verify_phase_6.py  verify_phase_7.py
tests/: test_agent_wrapper.py  test_db_client.py  test_decision_accuracy.py  test_genai_safety.py  test_state_machine.py
(+69 files in other folders)
